--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="img/cara-logo-512.jpeg" type="image/x-icon">
+
   </head>
   <body>
     <section id="header">
